# triangles

./: README.md
opengl/: CMakeLists.txt  README.md  main.cpp
opengl/dependencies/glad/: CMakeLists.txt
opengl/dependencies/glad/include/glad/: gl.h
